# securesync

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: architecture.md  design.md  features.md  mocks.md  phases.md  sources.md  (+1 more)
platform/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  run_dev.py
platform/alembic/: env.py
platform/alembic/versions/: 20260418_1526_0d23202f2755_initial_schema.py  20260418_1543_23b19d198859_add_user_invitation_columns.py  20260418_1551_d98ae26fba01_add_finding_ninjaone_ticket_id.py  20260418_1601_20d5585c2855_add_tenant_domain_verification.py  20260418_1612_88cbca709c5a_add_scan_schedules_table.py  20260418_1638_3f56cfaf8cc5_add_audit_logs_table.py
platform/app/: main.py
platform/app/api/v1/: assets.py  audit_logs.py  auth.py  findings.py  ratings.py  reports.py  router.py  scan_schedules.py  scans.py  tenants.py  users.py
platform/app/core/: celery_app.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  observability.py  rate_limit.py  redis_client.py  security.py  security_headers.py
platform/app/integrations/: defectdojo.py  epss.py  hibp.py  ninjaone.py  nuclei.py  openvas.py  wazuh.py  zap.py
platform/app/models/: __init__.py  asset.py  audit_log.py  base.py  enums.py  finding.py  rating.py  report.py  scan_job.py  scan_schedule.py  tenant.py  user.py
platform/app/schemas/: __init__.py  asset.py  audit_log.py  auth.py  finding.py  rating.py  report.py  scan.py  scan_schedule.py  tenant.py  user.py
platform/app/services/: __init__.py  audit.py  defectdojo_sync.py  domain_verification.py  enrichment.py  ninjaone_sync.py  normalizer.py  rating_engine.py  rating_service.py  report_generator.py  scheduler.py  wazuh_sync.py
platform/app/tasks/: scan_tasks.py  scheduler_tasks.py
platform/app/templates/: _base.html  report_executive.html  report_technical.html
platform/scripts/: seed.py
platform/tests/: conftest.py  factories.py
platform/tests/integration/: test_assets_api.py  test_auth_api.py  test_defectdojo_hooks.py  test_domain_verification_api.py  test_enrichment.py  test_findings_api.py  test_hardening.py  test_ninjaone_hooks.py  test_ratings_api.py  test_reports_api.py  test_scan_schedules_api.py  test_scan_task.py  test_scans_api.py  test_tenants_api.py  test_users_invite_api.py  test_wazuh_hooks.py
platform/tests/unit/: test_celery_config.py  test_defectdojo_client.py  test_domain_verification.py  test_epss_client.py  test_health.py  test_hibp_client.py  test_models.py  test_ninjaone_client.py  test_normalizer.py  test_nuclei_parser.py  test_observability.py  test_openvas_parser.py  test_rating_engine.py  test_report_generator.py  test_scheduler_service.py  test_schema_validation.py  test_security.py  test_wazuh_client.py  test_wazuh_parser.py  test_zap_parser.py
(+15 files in other folders)
